# SSL4Remote

./: .gitignore  README.md  christchurch_679.tif  christchurch_679_vis.tif  guide_complet_expe.md  guide_hpc_ai4geo.md  requirements.txt  setup.cfg  setup.py
.run/: train.run.xml
dl_toolbox/: Fancy_PCvisu.py  epoch  export_checkpoint_to_onnx.py  fancyPCA_vai.py  figures.py  get_dataset_meta.py  mean_std.py  new_visu_from_ckpt.py  predict.py  predict_image.py  test_16bitprocessing.py  test_augmentations.py  test_on_dataset.py  test_onnx.py  train.py  unet_digitanie.py  visu_from_checkpoint.py  visu_from_checkpoint_tiled.py
dl_toolbox/augmentations/: .nfs00000000030c3fcd0028d74a  .nfs00000000030c3fce0028d749  .nfs00000000030c3fcf0028d748  __init__.py  color.py  crop.py  cutmix.py  d4.py  getters.py  histograms.py  mixup.py  normalizations.py  strategies.py  utils.py
dlcooker_pfournie/: Fancy_PCvisu.py  predict_image.py  stat_scores_image.py  test_augmentations.py  train.py  visu_from_checkpoint.py  visu_from_checkpoint_tiled.py
src/: BugScaleRotate.py  Fancy_PCvisu.py  create_miniworld_custom.py  extract_window_from_tif.py  main.py  mainMT.py  mean_std.py  mean_teacher.py  new_visu_from_ckpt.py  predict_image.py  process_tb_event.py  profile  read_from_tb_event.py  test.py  testCPU.py  test_augmentations.py  test_augmentations_speed.py  test_miniworld.py  test_on_dataset.py  test_speed_dataloader.py  test_visu.py  testbug.py  train.py  trainFunction.py  validate_deps.py  visu_16bit.py  visu_airs.py  visu_from_checkpoint.py  visu_from_checkpoint_tiled.py
(+370 files in other folders)
