[metadata]
name = dl_toolbox
description = A toolbox with various modules, datasets, dataloaders, lightning modules, lightning datamodules and other things useful for deep learning.
long_description = file: README.rst
author = Pierre Fournier
author_email = pierre.fournier@onera.fr

[options]
zip_safe = False
packages = find:
install_requires =
	torch
	matplotlib
	imagesize
	pytorch_lightning
	segmentation_models_pytorch
	rasterio
